--- a/packages/local-api/package.json
+++ b/packages/local-api/package.json
@@ -1,8 +1,10 @@
 {
   "name": "@jsnoteapp/local-api",
-  "version": "1.0.0",
+  "version": "1.0.0-alpha.0",
   "description": "",
-  "files":["dist"],
+  "files": [
+    "dist"
+  ],
   "publishConfig": {
     "access": "public"
   },
@@ -21,9 +23,9 @@
     "typescript": "^4.9.4"
   },
   "dependencies": {
+    "@jsnoteapp/local-client": "^1.0.0-alpha.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "http-proxy-middleware": "^2.0.6",
-    "@jsnoteapp/local-client": "^0.1.0"
+    "http-proxy-middleware": "^2.0.6"
   }
 }
