--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jsnoteapp",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "",
   "files": [
     "dist"
@@ -20,9 +20,9 @@
     "@jsnoteapp/local-client": "^0.1.0"
   },
   "devDependencies": {
-    "@jsnoteapp/local-api": "^1.0.0-alpha.0",
-    "commander": "^9.4.1",
+    "@jsnoteapp/local-api": "^1.1.0",
     "@types/node": "^18.11.17",
+    "commander": "^9.4.1",
     "esbuild": "0.8.26",
     "typescript": "^4.9.4"
   }
