--- a/packages/local-api/package.json
+++ b/packages/local-api/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jsnoteapp/local-api",
-  "version": "1.0.0-alpha.0",
+  "version": "1.1.0",
   "description": "",
   "files": [
     "dist"
@@ -23,7 +23,7 @@
     "typescript": "^4.9.4"
   },
   "dependencies": {
-    "@jsnoteapp/local-client": "^1.0.0-alpha.0",
+    "@jsnoteapp/local-client": "^1.1.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "http-proxy-middleware": "^2.0.6"
