--- a/packages/local-client/package.json
+++ b/packages/local-client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jsnoteapp/local-client",
-  "version": "1.0.0-alpha.0",
+  "version": "1.1.0",
   "publishConfig": {
     "access": "public"
   },
